--- a/Hardware/README
+++ b/Hardware/README
@@ -1,3 +1,7 @@
 # README
 Please refer to "pcb_2_abril.pdf" file when assembly.
 There are two wired jumpers marked (with red circles and lines) that connect the voltage supply net.
+
+The latest schematic is the one named "MACA_PCB.pdf", this schematic has been made in kicad due 
+to file corruption of the previous ones (made with proteus). The new pcb board is not yet finished (at 1st May) 
+but contains the same circuits and components as the previous PCB.  
