--- a/Hardware/README
+++ b/Hardware/README
@@ -1,5 +1,5 @@
 # README
-Please refer to "pcb_2_abril.pdf" file when assembly.
+Please refer to "MACA PCB Description.pdf" file when assembly.
 There are two wired jumpers marked (with red circles and lines) that connect the voltage supply net.
 
 For gases concentration measurement:
